# TaskMon

./: .gitignore  LICENSE  PERFORMANCE_REPORT.md  README.md  Releases.md  build.bat  index.html  notes.md  package-lock.json  package.json  plan.md  run.bat
.claude/: settings.local.json
.github/: FUNDING.yml
samples/: messages.json
scripts/: rename-installer.cjs
src/: App.css  App.tsx  MainWindow.tsx  SettingsWindow.tsx  emojis.ts  locales.ts  types.ts
src-tauri/: Cargo.toml  check_output.txt  nsis-hooks.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  mail.rs  main.rs
